[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pkasolver"
version = "1.0.0"
description = "Toolset for predicting the pKa values of small molecules using graph convolutional networks"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Fritz Mayr", email = "e1425153@student.tuwien.ac.at" },
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["pKa", "chemistry", "machine learning", "graph neural networks", "drug discovery"]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "rdkit>=2022.9.1",
    "torch>=2.0.0",
    "torch-geometric>=2.0.0",
    "tqdm>=4.62.0",
    "matplotlib>=3.4.0",
    "svgutils>=0.3.4",
    "cairosvg>=2.5.0",
    "molvs>=0.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/mayrf/pkasolver"
Repository = "https://github.com/mayrf/pkasolver"

[tool.hatch.build.targets.wheel]
packages = ["pkasolver"]

[tool.hatch.build.targets.sdist]
include = [
    "/pkasolver",
    "/data",
]

[tool.pytest.ini_options]
testpaths = ["pkasolver/tests"]
python_files = ["test_*.py"]
addopts = "-v --color=yes"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]
